add swagger for schools and auth
